# serde_fields

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
src/: lib.rs
tests/: as_ref.rs  as_str.rs  basic.rs  deserialize.rs  display.rs  error.rs  foo.rs  from_str.rs  into_str.rs  rename.rs  rename_all.rs  serialize.rs  skip.rs  try_from.rs
